<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".solver.SolverFragment">

    <GridLayout
        android:id="@+id/small_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#A1A1A1"
        android:rowCount="3"
        android:columnCount="3">

        <TextView
            android:id="@+id/x_0_y_0"
            android:text="@string/number_1"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_0"
            android:text="@string/number_2"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_0"
            android:text="@string/number_3"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_0_y_1"
            android:text="@string/number_4"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_1"
            android:text="@string/number_5"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_1"
            android:text="@string/number_6"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_0_y_2"
            android:text="@string/number_7"
            android:layout_marginEnd="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_2"
            android:text="@string/number_8"
            android:layout_marginEnd="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_2"
            android:text="@string/number_9"
            style="@style/numberSquare"/>

    </GridLayout>

    <!--
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:rowCount="3"
        android:columnCount="3">

        <TextView
            android:id="@+id/x_0_y_0"
            android:text="@string/number_1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_0"
            android:text="@string/number_2"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_0"
            android:text="@string/number_3"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_0_y_1"
            android:text="@string/number_4"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_1"
            android:text="@string/number_5"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_1"
            android:text="@string/number_6"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="1dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_0_y_2"
            android:text="@string/number_7"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_2"
            android:text="@string/number_8"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_2"
            android:text="@string/number_9"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            style="@style/numberSquare"/>

    </GridLayout>
    -->

    <!--
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#4fa5d5"
        android:rowCount="3"
        android:columnCount="3">

        <TextView
            android:id="@+id/x_0_y_0"
            android:text="@string/number_1"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_0"
            android:text="@string/number_2"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_0"
            android:text="@string/number_3"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_0_y_1"
            android:text="@string/number_4"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_1"
            android:text="@string/number_5"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_1"
            android:text="@string/number_6"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_0_y_2"
            android:text="@string/number_7"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_1_y_2"
            android:text="@string/number_8"
            style="@style/numberSquare"/>

        <TextView
            android:id="@+id/x_2_y_2"
            android:text="@string/number_9"
            style="@style/numberSquare"/>

    </GridLayout>
    -->
</FrameLayout>